--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2008-02-28  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* app/simspark/internalsoccermonitor.rb:
+	- SparkGetFontServer() -> sparkGetFontServer()
+
+	* app/simspark/simspark.rb:
+	- soccersim.rb should be called before internalsoccermonitor.rb
+
+	* lib/kerosin/fontserver/fontserver.cpp (FontServer::LoadFont):
+	- check FontPath directory too
+
+	* lib/kerosin/kerosin.rb:
+	- font path is fonts/
+
 2008-02-28  Markus Rollmann  <rollmark@users.sourceforge.net>
 
 	* app/rsgedit/rsgedit.rb: - use the OpenGLSystemWX
