--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,26 @@
+2008-02-29  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* acinclude.m4:
+	- set have_glut under mac and try to compile and link against glut only when
+	  it is true. as I don't have a mac, I won't go furthur. (it doesn't have
+	  checking for glu and also GLUT is still in LDFLAGS even if have_glut is
+	  not set)
+
 2008-02-29  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
-	* acinclude.m4: 
+	* acinclude.m4:
 	- added BUILD_GLUT conditional for the mac part also,
 	  extended check for boost threads lib to try
 	  -lboost_thread-gcc
 
-	* lib/oxygen/Makefile.am: 
+	* lib/oxygen/Makefile.am:
 	- added @BOOST_THREADS_LIB@ to LIBADD for oxygen
 	  to fix unresolved references during runtime (on the mac)
 
 2008-02-28  Hedayat Vatankhah  <hedayat@grad.com>
 
-	* plugin/soccer/internalsoccermonitor/internalsoccerrender.cpp (InternalSoccerRender::OnLink):
+	* plugin/soccer/internalsoccermonitor/internalsoccerrender.cpp
+	 (InternalSoccerRender::OnLink):
 	- added fonts/ directory so that it can find VeraMono.ttf
 
 	* app/fonttest/Makefile.am:
