--- a/doc/users/introduction.tex
+++ b/doc/users/introduction.tex
@@ -2,38 +2,61 @@
 
 \section{What is Simspark?}
 
-\section{History of the Project}
+SimSpark is a multi-agent simulation system for agents in
+three-dimensional environments. Its goal is to provide a high degree
+of flexibility for creating new types of simulations. It builds on a
+flexible application framework and exhausts the idea of replaceable
+components throughout its implementation.
 
-%Started out as rcssserver3D, first competition in Lisbon 2004, etc.
-%Reference Marcos Thesis as the basis for the initial server development
-
-On the RoboCup 2003 Symposium, a new approach to a three-dimensional
-physically realistic soccer simulation was proposed. In a road map
-discussion for the Soccer Simulation League on RoboCup 2003, the
-participants decided on adding the three-dimensional simulation to the
-competitions. In 2004 a simulation built on top of SimSpark was used
-officially for the first three-dimensional RoboCup Simulation League
+In comparison to specialized simulators, users can create new
+simulations by using a scene description language. SimSpark is a
+powerful tool to state different multi-agent research questions and is
+used as the official simulator for the RoboCup Simulation League
 competition.
 
-One of the long term goals of the soccer simulation is to aim for
-realism. The long term objective are realistic humanoid players in a
-physical environment that one day can challenge the champion of the
-most recent World Cup. SimSparks two dimensional predecessor
-simulation models the players and the ball as flat spheres.
+\section{History of the Project}
 
-It further lacks a realistic physical environment. The initial
-SimSpark version of the soccer simulation took the next step into the
-third dimension. This version modeled players as spheres in a physical
-three dimensional world. Since then SimSpark grew even more feature
-and now supports humanoid players with articulated bodies.
+SimSpark was developed as part of the RoboCup initiative, initially
+called Robot World Cup Initiative. It is an international research and
+education initiative. It is an attempt to foster AI and intelligent
+robotics research by providing a standard problem where wide range of
+technologies can be integrated and examined, as well as being used for
+integrated project-oriented education.
 
-The soccer simulation was developed in parallel with the SimSpark
-simulator. It served from the beginning as a testbed and a guide for
-essential new features that were added to the simulator during
+For this purpose, RoboCup chose to use soccer game as a primary
+domain, and organizes competitive RoboCups. The simulation league is
+one of several leagues where the entire soccer game takes places in a
+simulated environment. SimSparks two dimensional predecessor
+simulation models the players and the ball as flat spheres. It further
+lacks a realistic physical environment.
+
+As one of the long term goals of the soccer simulation is to aim for
+realism the long term objective are realistic humanoid players in a
+physical environment. These player should one day challenge the
+champion of the most recent World Cup.
+
+On the RoboCup 2003 Symposium therefore, a new approach to a
+three-dimensional physically realistic soccer simulation was
+proposed. In a road map discussion for the Soccer Simulation League on
+RoboCup 2003, the participants decided on adding the three-dimensional
+simulation to the competitions.
+
+%Reference Marcos Thesis as the basis for the initial server development
+
+For RoboCup 2004, SimSpark was successfully used for the the first
+official competition in RoboCup Simulation League 3D.  The soccer
+simulation for this tournament was developed in parallel with the
+SimSpark simulator. In its' initial version players were modeled as
+spheres in a physical three dimensional world. Since then SimSpark
+grew even more feature and now supports humanoid players with
+articulated bodies.
+
+It served from the beginning as a testbed and a guide for essential
+new features that were added to the simulator during
 development. However changes to the simulator core were never
-customized for the soccer simulation. Instead wed implemented generic
-simulator services implemented and contained all soccer specific
-details are contained in a set of plugins.
+customized for the soccer simulation. Instead we implemented generic
+simulator services and contained all soccer specific details are in a
+set of plugins.
 
 \section{About this Manual}
 
