--- a/doc/users/gettingstarted.tex
+++ b/doc/users/gettingstarted.tex
@@ -1,3 +1,4 @@
+
  \chapter{Getting Started}
 
 \section{Download and Installation Instructions}
@@ -6,106 +7,159 @@
 
 This chapter explains how to install SimSpark on an Ubuntu Linux
 system\footnote{This guide is adapted from the guide created by the
-  Little Green Bats Team at
-  \url{http://www.littlegreenbats.nl/?q=node/70}}. It should work with
+Little Green Bats Team at
+\url{http://www.littlegreenbats.nl/?q=node/70}}. It should work with
 slight modifications on other distributions like Fedora, Suse and
 especially Debian.
 
 \begin{enumerate}
 
-\item Depending on the distribution version you are using you might need
-to enable additional repositories in order to install all required
-packages (Please refer to your system specific documentation). In
-Ubuntu these repositories are called 'Universe' and 'Multiverse'.
+\item Enable additional repositories
 
-To enable them you have to edit the /etc/apt/sources.list file and
-update the local package database.
+Depending on the distribution version you are using you might need to
+enable additional repositories in order to install all required
+packages. Please refer to your system specific documentation for
+details. In Ubuntu Linux these repositories are called
+\texttt{Universe} and
+\texttt{Multiverse}
 
-\$ sudo gedit /etc/apt/sources.list
-\$ sudo apt-get update
+To enable them you have to edit the \texttt{/etc/apt/sources.list}
+file and update the local package database.
 
-\item Install dependencies:
+\texttt{\$ sudo gedit /etc/apt/sources.list}
+
+
+\texttt{\$ sudo apt-get update}
+
+
+In RPM based distributions you may need to enable further download
+locations or download and install RPM packets manually. There are
+specialized search engines for RPM packages available like 
+
+\begin{enumerate}
+\item\url{http://packman.links2linux.de/} and
+\item\url{http://rpmfind.net/}
+\end{enumerate}
+
+\item Install dependencies
 
 SimSpark builds and depends upon the work of other software
-projects.
+projects. We use the Gnu autotools to configure and build
+SimSpark. Therefore these packages are required:
 
-We use the gnu autotools to configure and build SimSpark. Therefore
-these packages are required:
+\begin{enumerate}
+\item autoconf
+\item automake
+\item libtool
+\end{enumerate}
 
-autoconf
-automake
-libtool
+Further required packages are:
 
-Further required, i.e. non optional packages are
-
-Ruby
-The Open Dynamics Engine (ODE)
-The boost C++ libraries
-S-Lang (libslang)
+\begin{enumerate}
+\item Ruby
+\item The Open Dynamics Engine (ODE)
+\item The boost C++ libraries
+\item S-Lang (libslang)
+\end{enumerate}
 
 The rendering of SimSpark can be omitted from the build process
-therefore these packages are optional
+therefore these packages are optional:
 
-OpenGL
-FreeGlut
-SDL
-Freetype
-Developer Image Library (DevIL)
-Tiff library libtiff
+\begin{enumerate}
+\item OpenGL
+\item FreeGlut
+\item SDL
+\item Freetype
+\item Developer Image Library (DevIL)
+\item Tiff library (libtiff)
+\end{enumerate}
 
 In order to build the SimSpark documentation you need a Latex
-installation (e.g. tetex).
+installation (e.g. \texttt{tetex}).
 
-In order to build the rsgedit gui you need to install wxWidgets.
+If you want to build the rsgedit gui you need to install
+\texttt{wxWidgets}. The following commands download and installed the required packages:
 
-\$ sudo apt-get install g++ ruby1.9 ruby1.9-dev libode0-dev\
+\texttt{\$ sudo apt-get install g++ ruby1.9 ruby1.9-dev libode0-dev\
 libboost-dev libsdl-dev libfreetype6-dev libdevil-dev autoconf\
 automake1.9 libtool freeglut3-dev tetex-extra cvs xlibs-dev\
-libtiff4-dev libslang1-dev
+libtiff4-dev libslang1-dev}
 
-\$ sudo rm /usr/bin/ruby
-\$ sudo ln -s /usr/bin/ruby1.9 /usr/bin/ruby
-\$ sudo ln -s /usr/lib/libruby1.9.so /usr/lib/libruby.so
+\texttt{\$ sudo rm /usr/bin/ruby}
 
-\item Check out the source from the source forge CVS repository:
 
-\$ cvs -d:pserver:anonymous@sserver.cvs.sourceforge.net:/cvsroot/sserver login
-[ when asked for a password, just press enter]
+\texttt{\$ sudo ln -s /usr/bin/ruby1.9 /usr/bin/ruby}
 
-\$ cvs -z3 -d:pserver:anonymous@sserver.cvs.sourceforge.net:/cvsroot/sserver co -P rcsoccersim/rcssserver3D
+
+\texttt{\$ sudo ln -s /usr/lib/libruby1.9.so /usr/lib/libruby.so}
+
+\item Check out the source from the source forge CVS repository
+
+The SimSpark source is hosted in a CVS repository at
+sourceforge.net. In order to build the source first download the
+current version, this is called \texttt{check out} in CVS terminology:
+
+\texttt{\$ cvs -d:pserver:anonymous@sserver.cvs.sourceforge.net:/cvsroot/sserver login}
+
+
+When you get asked for a password, just press enter.
+
+
+\texttt{\$ cvs -z3 -d:pserver:anonymous@sserver.cvs.sourceforge.net:/cvsroot/sserver co -P rcsoccersim/rcssserver3D}
+
 
 \item Build and install the soccer server
 
-The configure script accepts a number of options that you can add to
-it's command line.
+The automake build tools use a \texttt{configure} script that adapts
+the build process to your system allows you to customize it. The
+configure script accepts a number of options that you can add to it's
+command line:
 
+\begin{enumerate}
 
---help lists all available configure options
+\item \texttt{--help} lists all available configure options. There are some more available 
+that would exceed the scope of this manual
 
---enable-debug=no builds an optimized version of SimSpark.
+\item \texttt{--enable-debug=no} builds an optimized version of SimSpark 
+that contains no debug symbols
 
---enable-kerosin=no builds SimSpark without rendering support
+\item \texttt{--enable-kerosin=no} builds SimSpark without rendering support
 
---prefix=/some/path defines the path where the 'make install' will install the SimSpark executable, plugins and resources.
+\item \texttt{--prefix=/some/path} defines the path where the \texttt{make install} will later 
+install the SimSpark executable, plugins and resources into your
+system. If omitted it defaults to /usr/local
 
-If omitted it defaults to /usr/local
+\end{enumerate}
 
-\$ cd rcsoccersim/rcssserver3D/
-\$ ./bootstrap
-\$ ./configure
-\$ make
-\$ sudo make install
+Change in to the top level source directory call the bootstrap script
+that invokes the autotools, run configure with your custom options,
+start the build process and install the server into your system.
+
+\texttt{\$ cd rcsoccersim/rcssserver3D/}
+
+\texttt{\$ ./bootstrap}
+
+\texttt{\$ ./configure}
+
+\texttt{\$ make}
+
+\texttt{\$ sudo make install}
 
 \item Make sure the linker can find your shared libraries if you changed
-the install prefix as described above with the --prefix option.
+the install prefix as described above with the \texttt{--prefix}
+option.
 
-\$ sudo gedit /etc/ld.so.conf
-[add your install prefix if it isn't already there, save and close]
-\$ sudo ldconfig
+\texttt{\$ sudo gedit /etc/ld.so.conf}
+
+Add your install prefix if it isn't already there, save and close.
+
+\texttt{\$ sudo ldconfig}
 
 \item run the simulation
-\$ cd
-\$ simspark
+
+{\texttt{\$ cd}}
+
+{\texttt{\$ simspark}}
 
 \end{enumerate}
 
